Using Collectors.toList as it creates a modifiable